<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/Next"
        app:layout_constraintEnd_toEndOf="@+id/load_question"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupLoadOption" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/reset_list"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/load_question"
        app:layout_constraintTop_toBottomOf="@+id/buttonNext" />

    <RadioGroup
        android:id="@+id/radioGroupLoadOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="@+id/load_question"
        app:layout_constraintTop_toBottomOf="@+id/load_question">

        <RadioButton
            android:id="@+id/radioButtonLoadCo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LoadCo" />

        <RadioButton
            android:id="@+id/radioButtonLoadGeoHash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LoadGeoHash" />

        <RadioButton
            android:id="@+id/radioButtonEnterCo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/EnterCo" />

        <RadioButton
            android:id="@+id/radioButtonSelectPlaces"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SelectPlaces" />

        <RadioButton
            android:id="@+id/radioButtonUseExample"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/UseExample" />

        <RadioButton
            android:id="@+id/radioButtonProofCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/run_check_on_algorithm"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/radioGroupLoadOption"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupLoadOption" />

    </RadioGroup>

    <TextView
        android:id="@+id/load_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_question"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="188dp"
        android:layout_marginTop="133dp"
        android:text="@string/startHere"
        android:textColor="#B30606"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/radioGroupLoadOption"
        app:layout_constraintTop_toTopOf="@+id/radioGroupLoadOption" />

</androidx.constraintlayout.widget.ConstraintLayout>