<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoadCoordinates">

    <Button
        android:id="@+id/buttonLoadShort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/select_file"
        app:layout_constraintStart_toStartOf="@+id/textViewSelectFile"
        app:layout_constraintTop_toBottomOf="@+id/tv_output_short" />

    <Button
        android:id="@+id/buttonCalcRoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="50dp"
        android:text="@string/calculate_route"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonLoad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/select_file"
        app:layout_constraintStart_toStartOf="@+id/textViewSelectFile"
        app:layout_constraintTop_toBottomOf="@+id/tv_output" />

    <TextView
        android:id="@+id/textViewSelectFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:text="@string/select_coordinate_file"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/textViewSelectFileShort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="50dp"
        android:text="@string/please_select_the_file_with_the_shortest_route"
        app:layout_constraintStart_toStartOf="@+id/buttonLoad"
        app:layout_constraintTop_toBottomOf="@+id/buttonLoad" />

    <TextView
        android:id="@+id/tv_output_short"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@+id/textViewSelectFileShort"
        app:layout_constraintTop_toBottomOf="@+id/textViewSelectFileShort" />

    <TextView
        android:id="@+id/tv_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@+id/textViewSelectFile"
        app:layout_constraintTop_toBottomOf="@+id/textViewSelectFile" />
</androidx.constraintlayout.widget.ConstraintLayout>