<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/calculating_route"
        android:textSize="18sp" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="45dp"
        tools:context=".MapsActivity" />

    <Button
        android:id="@+id/buttonZoomOut"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="80dp"
        android:text="-"
        android:textSize="14sp" />

    <Button
        android:id="@+id/buttonZoomIn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_above="@+id/buttonZoomOut"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="0dp"
        android:text="+"
        android:textSize="14sp" />

    <Button
        android:id="@+id/buttonPreviousStep"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="2dp"
        android:layout_toStartOf="@+id/textViewDistance"
        android:text="@string/previousStep"
        android:textSize="14sp" />

    <Button
        android:id="@+id/buttonNextStep"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="2dp"
        android:layout_toEndOf="@+id/textViewDistance"
        android:text="@string/nextStep"
        android:textSize="14sp" />

</RelativeLayout>