<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterCoordinates">

    <Button
        android:id="@+id/buttonAddCo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/add_coordinate"
        app:layout_constraintStart_toStartOf="@+id/editTextLongitude"
        app:layout_constraintTop_toBottomOf="@+id/textViewAdded" />

    <Button
        android:id="@+id/buttonCalcRouteParameterDiamond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="Calculate Route (Parameter Diamond)"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonCalcRouteCombo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="Calculate Route (Combo)"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/buttonCalcRouteBubbleShrink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonCalcRouteBubbleShrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="Calculate Route (Bubble Shrink)"
        app:layout_constraintBottom_toTopOf="@+id/buttonCalcRouteParameterDiamond"
        app:layout_constraintStart_toStartOf="@+id/buttonCalcRouteParameterDiamond" />

    <EditText
        android:id="@+id/editTextLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Latitude"
        app:layout_constraintStart_toStartOf="@+id/buttonCalcRouteParameterDiamond"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Longitude"
        app:layout_constraintStart_toStartOf="@+id/editTextLatitude"
        app:layout_constraintTop_toBottomOf="@+id/editTextLatitude" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PleaseEnterCo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editTextLatitude"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/textViewAdded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@+id/editTextLongitude"
        app:layout_constraintTop_toBottomOf="@+id/editTextLongitude" />
</androidx.constraintlayout.widget.ConstraintLayout>